static/additional-css/main.css
html, body {
    font-family: 'Montserrat', sans-serif;
    height: 100%;
    margin: 0;
    padding: 0;
}

#map {
    height: 45vw;
}

.container-fluid,
.col-md-3,
.col-md-9 {
    height: 100%;
}

.ApiPicture {
    max-height: 10vw;
}

:root {
    --primary-color: #D041F3;
    --secondary-color: #E58AFD;
}

.top-title {
    height: 7vw;
    /*max-height: 10vw;*/
    font-size: 6em;
    font-family: 'Inconsolata', monospace;
    color: var(--secondary-color);
    background-color: var(--primary-color);
    text-align: center;
    font-style: italic;
}



.hidden-on-desktop {
    visibility: hidden;
}

/* Phones only */
@media only screen and (max-width: 830px) and (min-width: 300px) and (max-height: 830px){


    .hidden-on-desktop {
        visibility: visible;
    }

    .hamburger-bar {
        width: 35px;
        height: 5px;
        background-color: var(--primary-color);
        margin: 6px 0;
    }

    /* The side navigation menu */
    .sidenav {
        height: 100%; /* 100% Full-height */
        /*width: 0; */
        position: fixed; /* Stay in place */
        z-index: 1; /* Stay on top */
        /*top: 0; */
        /*top: 13vw;*/
        left: 0;
        background-color: white;  
        /*overflow-x: hidden;  Disable horizontal scroll */
        /*padding-top: 60px;  Place content 60px from the top */
        /*transform: translate(-400px, 0);*/
        transform: translate(-100vw, 0);
        transition: 0.5s ease; 
    }

    .open {
        transform: translate(0,0);
    }

    /* Position and style the close button (top right corner) */
    .sidenav .closebtn {
        position: absolute;
        top: 0;
        right: 25px;
        font-size: 36px;
        margin-left: 50px;
    }

    /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
    .main {
        transition: margin-left .5s;
        padding: 20px;
    }

    /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
    @media screen and (max-height: 450px) {
        .sidenav {padding-top: 15px;}
        .sidenav a {font-size: 18px;}
    }
    

}



/*Phone vertical*/
@media only screen and (max-width: 450px) and (min-width: 300px) and (max-height: 750px){
    
    .ApiPicture {
        max-height: 40vw;
    }

    .top-title {
    height: 12vw;
    font-size: 2em;
    }

    .sidenav {
        top: 23vw;
    }
}

/*Phone horizontal*/
@media only screen and (max-width: 820px) and (min-width: 451px) and (max-height: 450px) {
    
    .ApiPicture {
        max-height: 20vw;
    }

    .top-title {
    height: 10vw;
    font-size: 3em;
    }

    .sidenav {
        top: 16.3vw;
    }
}

/*iPhone X  and Pixel 2L vertical*/
@media only screen and (max-width: 420px) and (min-width: 370px) and (max-height: 830px){
    
    .ApiPicture {
        max-height: 40vw;
    }

    .top-title {
    height: 12vw;
    font-size: 2em;
    }

    .sidenav {
        top: 10vw;
    }
}

/*iPhone X and Pixel 2L horizontal*/
@media only screen and (max-width: 830px) and (min-width: 810px) and (max-height: 420px) {
    
    .ApiPicture {
        max-height: 20vw;
    }

    .top-title {
    height: 8vw;
    font-size: 3em;
    }

    .sidenav {
        top: 10vw;
    }
}



/*Tablet vertical*/
@media only screen and (max-width: 1050px) and (min-width: 750px) and (min-height: 1024px) {
    
    .ApiPicture {
        max-height: 30vw;
    }

    .top-title {
    height: 10vw;
    font-size: 3.5em;
    }

    .sidenav {
        top: 10vw;
    }
}

/*Tablet horizontal*/
@media only screen and (max-width: 1400px) and (min-width: 1000px) and (min-height: 750px) {
    
    .ApiPicture {
        max-height: 20vw;
    }

    .top-title {
    height: 8vw;
    font-size: 3.5em;
    }

    .sidenav {
        top: 10vw;
    }
}

